force-app/main/default/objects/XAP_TRG_Trigger_Step__mdt/XAP_TRG_Trigger_Step__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Step</label>
    <pluralLabel>Trigger Steps</pluralLabel>
</CustomObject>