force-app/main/default/objects/XAP_TRG_Trigger_Step__mdt/fields/Operation_Timing__c.field-meta.xml
<CustomField>
    <fullName>Operation_Timing__c</fullName>
    <label>Operation Timing</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
                <default>true</default>
                <label>Before</label>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>