force-app/main/default/objects/XAP_TRG_Trigger_Step__mdt/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
                <default>true</default>
                <label>Insert</label>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Undelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>