force-app/main/default/objects/XAP_TRG_Trigger_Step__mdt/fields/Reuse_Instance__c.field-meta.xml
<CustomField>
    <fullName>Reuse_Instance__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Reuse Instance</label>
    <type>Checkbox</type>
</CustomField>