force-app/main/default/objects/XAP_TRG_Trigger_Step__mdt/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>43</length>
    <required>true</required>
    <type>Text</type>
</CustomField>