force-app/main/default/objects/XAP_TRG_Trigger_Step__mdt/fields/Throw_Error_If_Class_Missing__c.field-meta.xml
<CustomField>
    <fullName>Throw_Error_If_Class_Missing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Throw Error If Class Missing</label>
    <type>Checkbox</type>
</CustomField>