force-app/main/default/objects/XAP_TRG_Trigger_Step__mdt/listViews/Trigger_Step_Detailed_View.listView-meta.xml
<ListView>
    <fullName>Trigger_Step_Detailed_View</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Class_Name__c</columns>
    <columns>SObject_Type__c</columns>
    <columns>Operation_Timing__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Throw_Error_If_Class_Missing__c</columns>
    <columns>Reuse_Instance__c</columns>
    <filterScope>Everything</filterScope>
    <label>Trigger Step Detailed View</label>
</ListView>